# godotcpp2

./: .gitignore  CMakeLists.txt  EMERGENCY_ALERT_FIX.md  MedicalEquipmentDemo.gd  MedicalEquipmentDemo.tscn  PARSER_ERROR_FIX.md  README.md  README_HEADER.md  SurgicalBedMenuDemo.gd  SurgicalBedMenuDemo.tscn  WindowExtension.gdextension  build.sh  debug_emergency_scene.tscn  debug_emergency_test.gd  manual_test_rgb.gd  project.godot  quick_test.sh  run_godot.sh  test_cpp_light_integration.gd  test_extension.sh  test_scene.tscn  test_strategy_pattern.gd  test_table.md  validate_scene.gd
addons/medical_equipment/: plugin.cfg  plugin.gd
assets/: README.md
assets/medical/: comfort_mode.svg.import  emergency_alert.svg.import  hospital_background.svg.import  light_strip.svg.import  monitor.svg.import  patient_bed.svg.import  scanner.svg.import  sterile_mode.svg.import  surgical_bed.svg.import
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CPP_LIGHTSTRIP_INTEGRATION.md  CPP_STRATEGY_SVG_INTEGRATION.md  GODOT_USAGE_GUIDE.md  INDIVIDUAL_TEST_GUIDE.md  LEGACY_ARCHITECTURE.md  MARKDOWN_FIXES.md  MEDICAL_EXTENSION_SUMMARY.md  PRINT_DOCUMENTATION.md  TESTING_ARCHITECTURE.md  VISUAL_ASSETS_GUIDE.md
extensions/: CMakeLists.txt  README.md
extensions/core/: README.md  extension_config.json  register_types.cpp  register_types.os
extensions/medical_equipment/: MEDICAL_EQUIPMENT_DESIGN.md  README.md  bed.cpp  bed.h  bed_factory.cpp  bed_factory.h  godot_bed_factory.cpp  godot_bed_factory.h  godot_light_strip.cpp  godot_light_strip.h  light_strip.h  medical_devices.h  patient_bed.cpp  patient_bed.h  surgical_bed.cpp  surgical_bed.h
extensions/window_controls/: README.md  closed_curtain.cpp  closed_curtain.os  curtain_state.h  opaque.cpp  opaque.os  shade_state.h  transparent.cpp  transparent.os  window.cpp  window.h  window.os
integration_tests/: README.md  test_extension.gd  test_extension.tscn  test_medical_extension.gd
scenes/beds/: PatientBed.gd  PatientBed.tscn  PatientBed_Enhanced.tscn  SurgicalBed.gd  SurgicalBed.tscn  surgical_bed_menu.gd  surgical_bed_menu.tscn
test_project/: TESTING_GUIDE.md  main.tscn  main_simple.gd  main_simple_fixed.gd  project.godot  test_clean.gd  test_extension.gd  test_visual.gd  test_visual.tscn  window.gdextension
tests/: CMakeLists.txt  README.md  headless_test_runner.gd  run_tests.sh  simple_test_runner.gd  test_medical_equipment.cpp  test_surgical_bed_menu.gd
tests/core/: test_extension_registry.cpp  test_lifecycle_management.cpp  test_register_types.cpp
tests/medical_equipment/: test_bed_base.cpp  test_bed_factory.cpp  test_godot_bed_factory.cpp  test_light_strip.cpp.backup  test_light_strip_simple.cpp  test_patient_bed.cpp  test_surgical_bed.cpp
tests/shared/: README.md
tests/shared/mocks/: bed_test_mock.h  godot_mock.cpp  godot_mock.h  light_strip_test_mock.h
tests/shared/utils/: test_fixtures.h  test_helpers.h
tests/window_controls/: README_DISABLED.md  test_curtain_states.cpp  test_shade_states.cpp  test_state_pattern.cpp  test_window.cpp  test_window_state_implementations.cpp
themes/: medical_ui_theme.tres
